# SQLite-Connect

./: .gitignore  LICENSE  Makefile  README.md
buildSystems/cmake/: CMakeLists.txt
buildSystems/make/: Makefile
src/: Config.h  Sqlite.cpp  Sqlite.h  main.cpp
test/: main_test.cpp  queries.cpp  util.cpp
